# distill

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODING_PRINCIPLES.md  README.md  pyproject.toml
data/audiences/: technical_decision_makers.md
data/credibility/: README.md
data/research_topics/: README.md
data/research_topics/data_advantage/: entities.json  open_questions.json  (+4 more)
docs/: 15_knowledge_management_briefing_engine.md  data_advantage_brief.md  north_star.md  research_briefing_architecture.md
docs/brand/: README.md  tweet.md
docs/diagrams/: README.md  bootstrap_operator_flow.md  bootstrap_parser_pipeline.md  evidence_to_hypothesis_boundary.md  wiki_forward_links.md
docs/planning/: README.md
docs/specs/: 15_0_bootstrap_tooling.test.md  15_1_topic_config.test.md  15_2_source_adapter_contract.test.md
scripts/: smoke_full_text.py  smoke_pass2.py
src/: README.md  __init__.py  config.py
src/sources/: __init__.py  arxiv.py  base.py  lab_blog.py
src/topics/: __init__.py  config.py  credibility.py  frontmatter.py  hypothesis_updater.py  models.py  prompts.py  scoring.py  sources.py  storage.py
tests/: test_bootstrap_parser.py  test_credibility.py  test_hypothesis_updater.py  test_pass2_schema.py  test_source_adapters.py  test_topic_config.py  test_topic_scoring_pass1.py  test_topic_scoring_pass2.py  test_topic_storage.py
tests/fixtures/: arxiv_cs_ai.xml  arxiv_cs_cl.xml  arxiv_cs_lg.xml  bair_blog.xml  deepmind_blog.xml  fair_blog.xml  gradient_blog.xml  huggingface_blog.xml  lab_blog_article.html  openai_blog.xml  vector_institute.xml
(+41 files in other folders)
